src/themes/material/extends/_grid.scss
%grid-display {
    display: grid;
    grid-template-rows: min-content;
    background: $grid-bg;
    color: $grid-cell-color;
    border-radius: $grid-br;
    box-shadow: $grid-shadow;
    outline-style: none;
    overflow-x: hidden;
}

%grid-caption {
    display: flex;
    align-items: center;
    font-size: $grid-caption-fs;
    line-height: $grid-caption-lh;
    padding: $grid-caption-padding;
}

%grid-thead i {
    font-size: $grid-head-icon-size;
}

%grid-thead,
%grid-tfoot {
    display: block;
    margin-right: 16px;
    %grid-row {
        &:hover {
            background-color: transparent;
        }
    }
}

%grid-tbody {
    position: relative;
    /*overflow-y: scroll;*/
    will-change: transform;
}

%grid-tbody--empty {
    display: flex;
    justify-content: center;
    text-align: center;
}

%grid-row {
    display: flex;
    height:50px;
    background: $grid-row-bg;
    border-bottom: $grid-row-bb;
    transition: $grid-row-transition;
    outline-style: none;
    &:last-of-type {
        border-bottom: 0;
    }
    &:hover {
        background: $grid-row-hover;
    }
}

%grid-row--selected {
    color: $grid-row-color-selected;
    background-color: $grid-row-bg-selected;
    border-bottom: 1px solid rgba(0, 0, 0, 0);
    box-shadow: inset 0 3px 1px rgba(0, 0, 0, .08);
    &:hover {
        background: $grid-row-bg-selected;
    }
}

%grid-cell-display {
    display: inline-flex;
    width: 100%;
    outline-style: none;
    padding: $grid-cell-padding;
    font-size: $grid-cell-fs;
    line-height: $grid-cell-lh;
    color: inherit;
    text-align: left;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

%grid-cell-number {
    text-align: $grid-cell-align-num;
}

%grid-cell--selected {
    color: $white;
    background-color: $secondary-color !important;
    border-bottom: 0;
    margin-bottom: -1px;
    box-shadow: inset 0 3px 1px rgba(0, 0, 0, .12);
    z-index: 10;
}

%grid-cell-header {
    display: flex;
    position: relative;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
    font-size: $grid-head-fs;
    font-weight: $grid-head-fw;
    overflow: visible;
    min-width: 0;
    & .title {
        cursor: pointer;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        user-select: none;
    }
}

%grid-cell-header-content {
    display: flex;
    align-items: center;
    overflow: hidden;
    & .title {
        display: flex;
        align-items: center;
        flex-grow: 1;
    }
}

%grid-cell-header-cicon {
    font-size: $grid-head-icon-size;
    line-height: $grid-head-icon-lh;
    padding: $grid-head-icon-padding;
}

